# Pricing-Intelligence-Interpretation-Process

./: .env.docker.example  .gitignore  Makefile  README.md  compose-dev.yaml  compose-mock.yml  docker-compose.yml  requirements.txt  requirements_visualizations.txt
.github/workflows/: docker_ci.yaml
analysis_api/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
analysis_api/src/: app.ts  index.ts  openapi.yaml  types.ts
analysis_api/src/api/: analysis.ts  index.ts  summary.ts
analysis_api/src/services/: minizinc.service.ts  (+1 more)
analysis_api/tests/: api.test.ts  integration.test.ts  new-endpoints.test.ts  setup.ts  utils.ts
cron/: .gitattributes  Dockerfile  cronjob
csp/: Dockerfile  pom.xml
data/: CAiSE_analytics.json  TSC_analytics.json
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  prompts.ts  sphere.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
frontend/tests/: utils.test.ts  utils.unit.test.ts
harvey_api/: Dockerfile  README.md  pyproject.toml
harvey_api/src/harvey_api/: agent.py  app.py  config.py  container.py  file_manager.py  llm_client.py  pricing_context.py  stream.py
harvey_api/src/harvey_api/clients/: mcp.py
harvey_api/tests/: test_app.py  test_file_manager.py
logs/: llm_logs.csv  transformation_logs.csv
mcp_server/: .env.example  Dockerfile  README.md  pyproject.toml
mcp_server/src/pricing_mcp/: config.py  mcp_server.py
mcp_server/src/pricing_mcp/clients/: amint.py
mcp_server/src/pricing_mcp/workflows/: pricing.py
src/: Dockerfile
wiremock/__files/: ipricing-mock.yaml
wiremock/mappings/: transform-status.json  transform.json
(+100 files in other folders)
