[project]
name = "harvey-pricing-assistant"
version = "0.1.0"
description = "FastAPI service hosting H.A.R.V.E.Y., the conversational pricing assistant"
readme = "README.md"
authors = [
    { name = "Anonymous" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "openai>=1.44.0",
    "sse-starlette>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"harvey_api" = ["docs/*.md"]

[tool.ruff]
line-length = 100
